--- a/lib/android/boilerplate/templates/mvp-boilerplate/app/src/main/res/values/template_login_strings.xml
+++ b/lib/android/boilerplate/templates/mvp-boilerplate/app/src/main/res/values/template_login_strings.xml
@@ -1,4 +1,6 @@
 <resources>
+     <% if enable_facebook_login %>
     <string name="facebook_app_id">453639134846634</string>
+     <% end %>
     <string name="login_activity_title">Login</string>
 </resources>
